examples/compiler_errors/header_counts/MixedBroken.flx
// skip: support or non-error companion fixture for compiler diagnostics

module MixedBroken {
    type MaybeInt = SomeInt(Int) | NoneInt
}
